Bug 417351: (Linux only)  Initialize nsDeviceContextSpecGTK member data to null, fixing crash in destructor when cancelling printing.  r+sr=roc, a=blocking1.9+